# api-example

./: docker-compose.yml  dockerfile  pyproject.toml
api/: db.py  main.py  migration.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
tests/: test_main.py
